--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.2.0",
     "react-use": "^17.6.0",
     "tailwindcss": "^4.0.0"
   },
